2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/files/mpsub.py (_clean_lines):
	Remove newlines from the beginning of lines to stop them from being
	prepended to the header.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/header-dialog.glade:
	Do not wrap text in text views.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/file/save.py (set_format, set_newline):
	* gaupol/gtk/dialogs/file/subtitle.py (set_encoding):
	Allow values of None, with which nothing will be done.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/save.py (save_main_document):
	Update references to renamed variables and methods.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py (VIDEO_PLAYER.MPLAYER.command):
	Add -slang (without parameters) to avoid loading VobSubs in Matroska
	video containers such that they would override the Gaupol-edited
	subtitle file given with the -sub option.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (on_select_video_file_activate):
	Set filechooser filename to page.project.video_path.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/page.py (_on_tab_event_box_enter_notify_event):
	Use name "Character encoding" instead of "Encoding".

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (_pre_open_check):
	Fix order of arguments in _check_file_is_not_open call.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/open.py:
	* gaupol/errors.py:
	* gaupol/gtk/agents/open.py:
	Add gaupol.ParseError and raise that in OpenAgent.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (_show_parse_error_dialog):
	Change message wording.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/register.py (_shift_changed_value):
	* gaupol/agents/util.py (_get_format):
	* gaupol/gtk/agents/save.py (save_translation_document):