@@ -1,5 +1,11 @@
 2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* gaupol/gtk/view.py (_on_key_press_event):
+	Disable Ctrl+PageUp/PageDown to allow them to be used solely for
+	navigation between notebook tabs.
+
+2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* gaupol/files/mpsub.py (_clean_lines):
 	Remove newlines from the beginning of lines to stop them from being
 	prepended to the header.
